assets/scss/pages/_single-course.scss
/* ... */
// Tabs
.masteriyo-stab {
	display: flex;
	flex-direction: row;
	gap: 40px;
	border-top: 1px solid var(--masteriyo-color-border);
	border-bottom: 2px solid var(--masteriyo-color-border);
	font-size: 18px;
	font-weight: 600;
	margin-bottom: $spacing_24px;
	margin-top: $spacing_32px;
	word-break: break-all;

	> div {
		font-weight: 700;
	}

	> * {
		padding: $spacing_15px 0;
		cursor: pointer;
	}

	> .active-tab {
		border-bottom: 2px solid var(--masteriyo-color-primary);
		color: var(--masteriyo-color-primary);
		margin-bottom: -#{$spacing_2px};
	}

	// Curriculum tab
	&--tcurriculum {
		.masteriyo-stab--shortinfo {
			border-bottom: 2px solid var(--masteriyo-color-border);
			padding-bottom: $spacing_24px;
			padding-left: $spacing_32px;
			padding-right: $spacing_32px;
			display: flex;
			flex-wrap: wrap;
			align-items: center;
			justify-content: space-between;

			.title-container {
				display: flex;
				flex-direction: column;

				.title {
					margin: 0;
					font-weight: 500;
					font-size: 24px;
					line-height: 28px;
					margin-bottom: $spacing_12px;
				}
			}
		}

		ul.masteriyo-shortinfo-wrap {
			list-style: none;
			display: flex;
			flex-direction: row;
			gap: 8px;
			margin: inherit;
			font-size: 14px;
			font-weight: 400;
			line-height: 16px;
			letter-spacing: 0.005em;
			padding: 0;
		}

		ul li:first-child::before {
			display: none;
		}

		ul li::before {
			content: "";
			background: var(--masteriyo-color-grey-dark);
			display: inline-block;
			width: 0.3em;
			height: 0.3em;
			margin: 0 $spacing_4px $spacing_2px 0;
			border-radius: $border_radius_50;
		}

		.masteriyo-expand-collape-all {
			cursor: pointer;
			text-decoration: none;
		}

		.masteriyo-stab--citems {
			border-bottom: 1px solid var(--masteriyo-color-border);
			cursor: pointer;

			.masteriyo-cminus {
				display: none;
			}

			&:last-of-type {
				border: none;
			}

			.masteriyo-cplus {
				svg {
					fill: var(--masteriyo-color-text-light);
				}
			}

			&.active {
				border-bottom: 0;

				.masteriyo-cminus {
					display: flex;
					align-items: center;
					justify-content: center;
					svg {
						fill: var(--masteriyo-color-text-light);
					}
				}

				.masteriyo-cheader {
					background: var(--masteriyo-color-primary);

					.masteriyo-ctitle,
					.masteriyo-ltc {
						color: var(--masteriyo-color-white);
					}
				}

				.masteriyo-cbody {
					max-height: 999px;
					@include masteriyo-default-border;
					background: var(--masteriyo-color-primary-lightest);
				}

				.masteriyo-cplus {
					display: none;
				}

				.masteriyo-cminus {
					display: block;
					background: var(--masteriyo-color-white);
					border-radius: $border_radius_50;
					width: 24px;
					height: 24px;
					@include masteriyo-shadow-1;
				}
			}
		}

		.masteriyo-cheader {
			display: flex;
			flex-direction: row;
			align-items: center;
			justify-content: space-between;
			padding: $spacing_24px $spacing_32px;
		}

		.masteriyo-ctitle {
			margin: inherit;
			font-size: 16px;
			font-weight: 700;
			letter-spacing: 0.005em;
			color: var(--masteriyo-color-heading);
		}

		.masteriyo-ltc {
			display: flex;
			flex-direction: row;
			gap: 16px;
		}

		.masteriyo-clessons {
			font-size: 16px;
		}

		.masteriyo-cbody {
			max-height: 0;
			overflow: hidden;
			transition: max-height 200ms;
			border-top: 0;

			.masteriyo-lesson-icon {
				display: flex;
				margin-right: $spacing_8px;
			}
		}

		.masteriyo-lesson-list {
			margin: 0;
			padding: 0;
			list-style: none;

			li {
				padding: $spacing_16px 0;
				border-bottom: 1px solid var(--masteriyo-color-border);

				&:last-of-type {
					border-bottom: none;
				}
			}

			&__content {
				display: flex;
				align-items: center;
				padding: 0 $spacing_32px;

				&-item {
					display: flex;
					justify-content: space-between;
					align-items: center;
				}

				.masteriyo-right {
					width: 100%;
				}
			}
		}

		.masteriyo-time {
			gap: 8px;

			.masteriyo-icon-svg svg {
				width: 16px;
				height: 16px;
			}
		}
		.masteriyo-time-btn {
			.masteriyo-btn {
				padding: $spacing_6px $spacing_12px;
				font-size: 10px;
			}
		}
		.masteriyo-lesson-list--btn {
			border-radius: $border_radius_100;
			text-transform: uppercase;
		}
	}

	// Faq Tab
	&--faq {
		.masteriyo-faq--item-header {
			overflow: hidden;
			border-bottom: 1px solid var(--masteriyo-color-border);
			padding: $spacing_16px $spacing_30px;
			font-size: 16px;
			font-weight: 600;
			cursor: pointer;

			&:last-of-type {
				border-bottom: 0;
			}
		}

		.masteriyo-faq--item-body {
			display: none;
			border-bottom: 1px solid var(--masteriyo-color-border);
			padding: $spacing_16px $spacing_30px;

			.content {
				margin: inherit;
			}
		}
	}

	// Reviews tab
	&--treviews {
		display: flex;
		justify-content: center;
		align-items: center;
		padding: 0 $spacing_32px;
	}

	&-rs {
		@include masteriyo-shadow-2;
		margin: $spacing_20px auto;
		padding: $spacing_20px;
		border-radius: $border_radius_50;
		gap: 20px;
		font-weight: 600;
		display: flex;
		align-items: center;

		.masteriyo-icon-svg > svg {
			width: 20px;
			height: 20px;
			fill: var(--masteriyo-color-golden);
		}
	}

	&--turating {
		text-align: center;
		margin-bottom: $spacing_40px;
	}
}

.masteriyo-item--wrap {
	display: flex;
	flex-wrap: wrap;

	.masteriyo-single-course-item {
		display: flex;
	}
}
/* ... */

